--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "@radix-ui/react-toast": "^1.1.5",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^1.41.1",
     "clsx": "^2.1.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-cloudinary": "^5.17.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-toastify": "^9.1.3",
     "stripe": "^14.10.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.0",
